Fix horizontal scrollbar bug

--- a/src/styles/components/app.responsive.styl
+++ b/src/styles/components/app.responsive.styl
@@ -2,9 +2,6 @@
 @import "~styles/mixins"
 
 +mobile()
-  #html, body, #app
-    height: auto
-
   .App
     padding-bottom: 0
     min-height: auto
