--- a/src/styles/components/app.styl
+++ b/src/styles/components/app.styl
@@ -6,7 +6,6 @@
 html, body, #app
   margin: 0
   padding: 0
-  width: 100vw
   height: 100vh
   font: normal normal 400 14px Asap, sans-serif
   color: $text-grey
